--- a/src/angular/views/rules.html
+++ b/src/angular/views/rules.html
@@ -76,11 +76,13 @@
       <p class="fs-2 mt-4 ruleSubtitle"><i class="fa-solid fa-arrow-right-long me-1"></i> Sobre esse jogo!</p>
       <hr>
       <p class="fs-5">  
-          Nesse simples que tem em sua frente agora, há apenas uma maneira de jogar por enquanto, contra
+          Nesse simples que tem em sua frente agora, há duas maneiras de se jogar, contra
           o B.O.T. (BlackJack Original Technology), onde você joga contra um robô que seria um dealer num
-          cassino real e seu objetivo é derrota-lo! 
-          <br>
-          EM BREVE NOVAS FEATURES
+          cassino real ou no modo Multiplayer, onde você pode enfrentar um adversário para disputar quem é 
+          o melhor!
+          Crie uma conta e mantenha seu progresso salvo, além de liberar as conquistas e te dar um desafio 
+          extra nos jogos!
+          Vença partidas rápidas e vá subindo no ranking de todos os jogadores
       </p>
   </div>
 </div>
