--- a/src/angular/views/multiplayer.html
+++ b/src/angular/views/multiplayer.html
@@ -159,3 +159,22 @@
         </div>
     </div>
 </div>
+
+<!-- achievmentToast -->
+<div aria-live="polite" aria-atomic="true" class="position-relative">
+    <div class="toast-container bottom-0 end-0 p-3 bottom-0 start-0" style="position: fixed;">
+        <div class="toast" style="--bs-bg-opacity: .9; background-color: #a633d3" id="acvmToast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header txtPurple text-white">
+                <div class="fs-3">
+                    <i class="fa-solid fa-trophy"></i>
+                </div>
+                <strong class="ms-2 mt-2 h4">{{toastTitleAcvm}}</strong>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+                    aria-label="Close"></button>
+            </div>
+            <div class="toast-body text-black">
+                {{toastTextAcvm}}
+            </div>
+        </div>
+    </div>
+</div>
